fix: add font in assets fixing flick at reload, texts was chaging the font while running

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,3 +23,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  fonts:
+    - family: PressStart2P
+      fonts:
+        - asset: assets/fonts/PressStart2P-Regular.ttf
