--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   http: ^1.1.0
   go_router: ^6.0.0
   shared_preferences: ^2.2.2
+  webview_flutter: ^4.0.7
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_test:
@@ -24,7 +26,11 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/
     - assets/pixelmonfoto.png
+    - assets/minecraft_title.png
+    - assets/minecraft_title2.png
+
 
   fonts:
     - family: PressStart2P
